mesh.getVertex doesn't work as spected with poly.getMaterialIndex() and poly vertex indexes #34609

Closed
opened 2013-03-12 09:22:13 +01:00 by Eloy Felix · 4 comments

%%%--- Operating System, Graphics card ---

Ubuntu 12.04 64
GTX580

- Blender version with error, and version that worked ---

2.66a stable.

- Short description of error ---

Trying to store all the polygons(tris and quads) of an object getting the vertexs from every poly from the mesh(getVertex) doesn't work as specified on the doc:

getMaterialIndex()
Returns the material bucket index of the polygon. This index and the ones returned by getVertexIndex() are needed to retrieve the vertex proxy from MeshProxy.

The code is:

triangles = []
quads = []

for idPoly in range(mesh.numPolygons):

  poly = mesh.getPolygon(idPoly)
  polyMatIndex = poly.getMaterialIndex()
  
  v1 = mesh.getVertex(polyMatIndex, poly.v1)
  v2 = mesh.getVertex(polyMatIndex, poly.v2)
  v3 = mesh.getVertex(polyMatIndex, poly.v3)
  
  if poly.v4:
       print(idPoly, "getvertex4", polyMatIndex, poly.v4)
       v4 = mesh.getVertex(polyMatIndex, poly.v4)
       quads.append((v1.XYZ, v2.XYZ, v3.XYZ, v4.XYZ))
  else:
      triangles.append((v1.XYZ, v2.XYZ, v3.XYZ))
- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Blend file with the script and two objects attached.

%%%

%%%--- Operating System, Graphics card --- Ubuntu 12.04 64 GTX580 - Blender version with error, and version that worked --- 2.66a stable. - Short description of error --- Trying to store all the polygons(tris and quads) of an object getting the vertexs from every poly from the mesh(getVertex) doesn't work as specified on the doc: getMaterialIndex() Returns the material bucket index of the polygon. This index and the ones returned by getVertexIndex() are needed to retrieve the vertex proxy from MeshProxy. The code is: triangles = [] quads = [] for idPoly in range(mesh.numPolygons): ``` poly = mesh.getPolygon(idPoly) polyMatIndex = poly.getMaterialIndex() v1 = mesh.getVertex(polyMatIndex, poly.v1) v2 = mesh.getVertex(polyMatIndex, poly.v2) v3 = mesh.getVertex(polyMatIndex, poly.v3) if poly.v4: print(idPoly, "getvertex4", polyMatIndex, poly.v4) v4 = mesh.getVertex(polyMatIndex, poly.v4) quads.append((v1.XYZ, v2.XYZ, v3.XYZ, v4.XYZ)) else: triangles.append((v1.XYZ, v2.XYZ, v3.XYZ)) ``` - Steps for others to reproduce the error (preferably based on attached .blend file) --- Blend file with the script and two objects attached. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

%%%I started a thread in http://blenderartists.org/forum/showthread.php?290430-Store-all-tris-and-quads-from-objects-with-multiple-materials

I put the default cube with 3 materials and bge crashes. I think that it can be a problem of the bge converter when groups the polygons by material.%%%

%%%I started a thread in http://blenderartists.org/forum/showthread.php?290430-Store-all-tris-and-quads-from-objects-with-multiple-materials I put the default cube with 3 materials and bge crashes. I think that it can be a problem of the bge converter when groups the polygons by material.%%%

%%%Own fault - very old commit caused this,
reverted r22906, committed r56460.

Attaching corrected testfile.%%%

%%%Own fault - very old commit caused this, reverted r22906, committed r56460. Attaching corrected testfile.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34609
No description provided.