fix [#34609] mesh.getVertex doesn't work as spected with poly.getMaterialIndex() and poly vertex indexes revert r22906 (own old commit, was incorrectly trying to make vertex indices absolute)